Refactored, Improved config, Check Level to Flags

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,14 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="tinyurl">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <dependent-module archiveName="kvstore-0.0.16.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/kvstore/kvstore">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="packer-0.0.11.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/packer/packer">
+        <dependent-module archiveName="surbl-1.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/surbl/surbl">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="tinyurl"/>
